# CumulantAnalysis.jl

./: .gitignore  Project.toml  README.md
data/stdep_inputs/: infile.ssposcar  infile.ucposcar
data/stdep_results/: outfile.forceconstant_fourthorder
data/thermo_inputs/: infile.forceconstant  infile.forceconstant_thirdorder
data/thermo_results/: Cv_mean.txt  F_mean.txt  S_mean.txt  U_mean.txt  outfile.nsamples_study_corrections
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/api/: index.html
dev/example/: index.html
dev/installation/: index.html
dev/julia/: index.html
dev/python/: index.html
dev/theory/: index.html
docs/: make.jl
ext/: CAPlottingExt.jl  LAMMPSExt.jl  MollyExt.jl  TDEPExt.jl
python/: README.md  pyproject.toml
python/cumulant_analysis/: __init__.py  _julia.py  api.py  juliapkg.json
python/tests/: test_wrapper.py
src/: CumulantAnalysis.jl  analysis.jl  block_averaging.jl  bootstrap.jl  control_variates.jl  cumulant_corrections.jl  effective_hamiltonian.jl  error_analysis.jl  estimate.jl  estimate_V0.jl  harmonic_properties.jl  lammps_dump_parser.jl  phonon.jl  postprocess.jl  remap_ifcs.jl  run.jl  types.jl
workflows/: V0_var_reduction.jl  amorphous.jl  analytical.jl  argon.jl  argon_size_effects.jl  argon_stdep_size_effects.jl  harmonic_kmesh.jl  kmesh_studies.jl  lj_analytical.jl  neon.jl  neon.py  neon_lattice_params.jl  neon_lattice_params_stdep.jl  neon_test.jl  old.jl  plot_size_effects.jl  sample_long.jl  silicon.jl  silicon_stdep.jl  size_effects.jl  test_t_dependence.jl
(+52 files in other folders)
