[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cumulant-analysis"
version = "0.0.1"
description = "Python wrapper for CumulantAnalysis.jl"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ethan Meitz", email = "emeitz@andrew.cmu.edu" },
]
dependencies = [
    "juliacall>=0.9.35",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cumulant_analysis*"]

[tool.setuptools.package-data]
cumulant_analysis = ["juliapkg.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
